--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,10 @@ jobs:
       run: npx wrangler build
 
     - name: Add Header
-      run: cp ${{ github.workspace }}/dist/worker.js ${{ github.workspace }}/dist/worker-original.js && echo -e "/*!\r\n  * v2ray Subscription Worker (${{ github.sha }})\r\n  * Copyright 2024 Vahid Farid (https://twitter.com/vahidfarid)\r\n  * Licensed under GPLv3 (https://github.com/vfarid/v2ray-worker/blob/main/Licence.md)\r\n  */\r\n" > ${{ github.workspace }}/dist/worker.js && cat ${{ github.workspace }}/dist/worker-original.js >> ${{ github.workspace }}/dist/worker.js
+      run: |
+        cp ${{ github.workspace }}/dist/worker.js ${{ github.workspace }}/dist/worker-original.js
+        echo -e "/*!\r\n  * v2ray Subscription Worker (${{ github.sha }})\r\n  * Copyright 2024 Vahid Farid (https://twitter.com/vahidfarid)\r\n  * Licensed under GPLv3 (https://github.com/vfarid/v2ray-worker/blob/main/Licence.md)\r\n  */\r\n" > ${{ github.workspace }}/dist/worker.js
+        cat ${{ github.workspace }}/dist/worker-original.js >> ${{ github.workspace }}/dist/worker.js
       
     - name: Upload to Artifacts
       uses: actions/upload-artifact@v4
@@ -38,7 +41,9 @@ jobs:
         path: ${{ github.workspace }}/dist/worker.js
 
     - name: Add Release Header
-      run: echo -e "/*!\r\n  * v2ray Subscription Worker ${{ github.event.release.tag_name }}\r\n  * Copyright 2024 Vahid Farid (https://twitter.com/vahidfarid)\r\n  * Licensed under GPLv3 (https://github.com/vfarid/v2ray-worker/blob/main/Licence.md)\r\n  */\r\n" > ${{ github.workspace }}/dist/worker.js && cat ${{ github.workspace }}/dist/worker-original.js >> ${{ github.workspace }}/dist/worker.js
+      run: |
+        echo -e "/*!\r\n  * v2ray Subscription Worker ${{ github.event.release.tag_name }}\r\n  * Copyright 2024 Vahid Farid (https://twitter.com/vahidfarid)\r\n  * Licensed under GPLv3 (https://github.com/vfarid/v2ray-worker/blob/main/Licence.md)\r\n  */\r\n" > ${{ github.workspace }}/dist/worker.js
+        cat ${{ github.workspace }}/dist/worker-original.js >> ${{ github.workspace }}/dist/worker.js
       
     - name: Upload to GitHub Release
       uses: svenstaro/upload-release-action@v2
@@ -49,36 +54,3 @@ jobs:
         asset_name: worker.js
         tag: ${{ github.ref }}
         overwrite: true
- deploy:
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: "latest"
-        cache: "npm"
-
-    - name: Install modules
-      run: npm i wrangler@latest
-
-    - name: Build
-      run: npx wrangler build
-
-    - name: Add Header
-      run: |
-        cp ${{ github.workspace }}/dist/worker.js ${{ github.workspace }}/dist/worker-original.js
-        echo -e "/*!\n  * v2ray Subscription Worker (${{ github.sha }})\n  * Copyright 2024 Vahid Farid (https://twitter.com/vahidfarid)\n  * Licensed under GPLv3 (https://github.com/vfarid/v2ray-worker/blob/main/Licence.md)\n  */\n\n$(cat ${{ github.workspace }}/dist/worker.js)" > ${{ github.workspace }}/dist/worker.js
-
-    - name: Update wrangler.toml with KV_NAME
-      run: sed -i s/KV_NAME/${{ secrets.KV_NAME }}/g wrangler.toml
-
-    - name: Deploy
-      run: npx wrangler publish
-      env:
-        CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
-        CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
